// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`P should render correctly 1`] = `
<DocumentFragment>
  <span
    class="is-centered has-columns--2 c-type--p"
  >
    P Tag Children
  </span>
</DocumentFragment>
`;

exports[`P should render correctly with defaults 1`] = `
<DocumentFragment>
  <p
    class="c-type--p"
  >
    P Tag Children
  </p>
</DocumentFragment>
`;
